[project]
name = "knausen-signal"
version = "0.1.0"
description = "Cabin connectivity monitor: scrape Zyxel LTE7460 signal + run internet quality probes, push to Grafana Cloud."
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "icmplib>=3.0",
    "dnspython>=2.6",
    "certifi>=2024.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "responses>=0.25",
]

[project.scripts]
knausen-signal = "knausen_signal.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["knausen_signal"]

[tool.pytest.ini_options]
testpaths = ["tests"]
